MyNote/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-site-ingress
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: elb_dns
spec:
  rules:
    - host: elb_dns
      http:
        paths:
          - path: /user-service
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3001
          - path: /product-service
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 3002
          - path: /order-service
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3003
          - path: /payment-service
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 3004
